...
                    ZStack {
                        RoundedRectangle(cornerRadius: 50)
                            .foregroundColor(.green)
                        Text("bLogin")
                            .foregroundColor(.white)
                            .bold()
                            .accessibility(identifier: "LoginButton")
                    }
                    
                }
                .frame(width: 200, height: 35)
                .fullScreenCover(isPresented: $showLoginScreen) {
                    Login(isLogged: $isLogged)
...
