...
                            .strokeBorder()
                            .frame(width: 120, height: 50)
                            .foregroundColor(.white)
                        Text("bPayNow")
                            .foregroundColor(.white)
                            .bold()
                            .accessibility(identifier: "PayButton")
                    }
                }
                .offset(x: 80)
                .disabled(cartViewModel.totalPrice == 0.00)
                .fullScreenCover(isPresented: $showPaymentScreen) {
                    Payment(cartItems: $cartItems, totalPrice: $cartViewModel.totalPrice)
...
