...
                }
                Spacer()
                HStack {
                    Toggle(isOn: $isDarkTheme) {
                        Text("LTheme")
                    }
                    .accessibility(identifier: "SwitchThemeToggle")
                }
                .frame(width: 350)
                
                // MARK: - Change user info text fields
                
                VStack(alignment: .leading, spacing: 5) {
...
